--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ section .title::after{
 /* home section styling */
 .home{
     display: flex;
-    background: url("images/banner.jpeg") no-repeat center;
+    background: url("banner.jpeg") no-repeat center;
     height: 100vh;
     color: var(--color-1);
     min-height: 500px;
