--- a/style.css
+++ b/style.css
@@ -51,7 +51,9 @@ section .title{
     font-weight: 500;
     margin-bottom: 60px;
     padding-bottom: 20px;
-    font-family: 'Ubuntu', sans-serif;
+    color: var(--color-4);
+    font-weight: 600;
+    font-family: 'Roboto Slab', serif;
 }
 section .title::before{
     content: "";
@@ -60,7 +62,7 @@ section .title::before{
     left: 50%;
     width: 180px;
     height: 3px;
-    background: #111;
+    background:var(--color-4);
     transform: translateX(-50%);
 }
 section .title::after{
@@ -216,7 +218,7 @@ section .title::after{
 }
 .items p{
   display: flex;
-  justify-content: center;
+  margin-left: 20px;
 }
 .itemimg{
     width:50px;
